--- a/frontend/src/index.sass
+++ b/frontend/src/index.sass
@@ -1,14 +1,25 @@
+/* Color Variables */
+$light-green: #33FF99
+$grey:  #99CCCC  
+$light-grey:  #eceff1
+$light-salad: #99FF99 
+$violet: #9900FF 
+/* Colors Variables*/
 
-$base-color: black
-  
+/* Colors Variables*/
+$max-width-tablet: 980px
+$max-width-mobile: 500px
+/* Colors Variables*/
+
+
 body
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  border-radius: 3px
+  padding: 0
+  margin: 0
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
 code
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
   
